@@ -6,6 +6,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       gencode: Add a missing free() in gen_scode().
       Remove "DLT_" from the descriptions of two dlt_choices[] entries.
       Report the size of time_t in the version string.
+      Validate remote capture source strings better.
     Source code:
       Remove some unneeded includes.
       pcapint_find_function() changed to return "void *" to avoid
